prod_snapshot_2015-09-24_1030/objects/EContract__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>EContracts</relationshipLabel>
        <relationshipName>EContracts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Agreement__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Agreement</label>
        <referenceTo>echosign_dev1__SIGN_Agreement__c</referenceTo>
        <relationshipLabel>EContracts</relationshipLabel>
        <relationshipName>EContracts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>EContracts</relationshipLabel>
        <relationshipName>EContracts</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>EContract</label>
    <listViews>
        <fullName>All</fullName>
        <columns>LAST_UPDATE</columns>
        <columns>CREATED_DATE</columns>
        <columns>NAME</columns>
        <columns>Account__c</columns>
        <columns>Agreement__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>Opportunity__c</columns>
        <columns>OWNER.LAST_NAME</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>EContracts Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>EContracts</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>